crates/ui/tests/snapshots/battle__action_menu_snapshot.snap
---
source: crates/ui/tests/battle.rs
expression: h.snapshot()
---
                                                                      ╔════════════════════════════╗
                                                                      ║ Fort                       ║
                                                                      ║ DEF +2  AVO +20            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║ Test Lord                  ║
                                                                      ║ Exile  Lv 1                ║
                                                                      ║ HP 19/19   ██████████      ║
                                                                      ║ Player                     ║
                                                                      ║                            ║
                                                                      ║                            ║
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      ║                            ║
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      ║                            ║
                    ≈≈≈≈≈≈====······Br..♣♣♣♣....                      ║                            ║
                    ..≈≈≈≈..··..............Br..                      ║                            ║
                    ....Ar····...┌────────┐▓▓▓..                      ║                            ║
                    ..♣♣··....Lo.│ Attack │]▓▓..                      ║                            ║
                    ♣♣♣♣··..Kn...│ Wait   │░▓▓..                      ║                            ║
                    ♣♣♠♠··.......└────────┘▌▓▓..                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ╚════════════════════════════╝
                                                                                                    
 arrows choose · f confirm · d back                                                                 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcddddcccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabceeeeeeeeeccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccffffffffffccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcggggggcccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhhhiiiijjjjkkkkllllmmmmnnaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhiiiijjjjooppookkkkmmmmmmaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhiiiiqqqqoooooorrjjkkkkjjjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjiiiijjoojjjjjjjjjjjjjjssjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjjjttoooojjjbbbbbbbbbbuuujjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjkkoojjjjvvjbggggggggbwuujjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaakkkkoojjxxjjjbyyyyyyyybzuujjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaakklloojjjjjjjbbbbbbbbbbAuujjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:player bg:panel_bg
f = fg:hp_high bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:water bg:sea
i = fg:water bg:water_bg
j = fg:grass bg:grass_bg
k = fg:forest bg:forest_bg
l = fg:thicket bg:thicket_bg
m = fg:mountain bg:mountain_bg
n = fg:peak bg:peak_bg
o = fg:road bg:road_bg
p = fg:enemy bg:road_bg
q = fg:wood bg:water_bg
r = fg:enemy bg:grass_bg
s = fg:enemy bg:fort_bg
t = fg:player bg:road_bg
u = fg:stone bg:stone_bg
v = fg:player bg:fort_bg
w = fg:fort bg:fort_bg
x = fg:player bg:grass_bg
y = fg:panel_bg bg:panel_border_focus
z = fg:floor bg:floor_bg
A = fg:wood bg:stone_bg
B = fg:text_dim bg:black
--- overlays ---
over  240,270 16x2  hp_high
over  224,286 16x2  hp_high
over  192,254 16x2  hp_high
over  288,222 16x2  hp_high
over  352,238 16x2  hp_high
over  272,206 16x2  hp_high
